feat(04-01): Firebase ID token verification with Firestore-backed user lookup, RBAC helpers, and auth integration tests
- Implemented env-based Firebase token verification and Firestore user lookup

- Added RBAC dependencies and permission helpers

- Added auth integration tests and updated Phase 4 roadmap

--- a/.planning/firebase-rbac-migration/phases/04-backend-auth-refactor/04-01-PLAN.md
+++ b/.planning/firebase-rbac-migration/phases/04-backend-auth-refactor/04-01-PLAN.md
@@ -11,8 +11,8 @@ Output: Updated api/auth.py with real token verification, Firebase Auth integrat
 </objective>
 
 <execution_context>
-@~/.Opencode/skills/create-plans/workflows/execute-phase.md
-@~/.Opencode/skills/create-plans/templates/summary.md
+@~.config/.Opencode/skills/create-plans/workflows/execute-phase.md
+@~.config/.Opencode/skills/create-plans/templates/summary.md
 </execution_context>
 
 <context>
