--- a/.planning/firebase-rbac-migration/phases/04-backend-auth-refactor/04-02-PLAN.md
+++ b/.planning/firebase-rbac-migration/phases/04-backend-auth-refactor/04-02-PLAN.md
@@ -11,8 +11,8 @@ Output: POST /api/auth/sync endpoint for user synchronization and updated user c
 </objective>
 
 <execution_context>
-@~/.Opencode/skills/create-plans/workflows/execute-phase.md
-@~/.Opencode/skills/create-plans/templates/summary.md
+@~.config/.Opencode/skills/create-plans/workflows/execute-phase.md
+@~.config/.Opencode/skills/create-plans/templates/summary.md
 </execution_context>
 
 <context>
