--- a/.planning/firebase-rbac-migration/phases/04-backend-auth-refactor/04-03-PLAN.md
+++ b/.planning/firebase-rbac-migration/phases/04-backend-auth-refactor/04-03-PLAN.md
@@ -11,8 +11,8 @@ Output: Clean backend with only real Firebase authentication, updated configurat
 </objective>
 
 <execution_context>
-@~/.Opencode/skills/create-plans/workflows/execute-phase.md
-@~/.Opencode/skills/create-plans/templates/summary.md
+@~.config/.Opencode/skills/create-plans/workflows/execute-phase.md
+@~.config/.Opencode/skills/create-plans/templates/summary.md
 </execution_context>
 
 <context>
